[tool.poetry]
name = "my-fastapi-app"
version = "0.1.0"
description = ""
authors = ["behrouz <behrouzsharifi7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
